# storygamer

./: .gitignore  Cargo.toml
examples/yaml/: 01-entrypoint.yaml  02a-flashback.yaml  02b-wander+03-end.yaml  Storygame.yaml
src/: bin.rs
src/lib/: errors.rs  mod.rs  utils.rs
src/lib/app/: core.rs  logger.rs  mod.rs
src/lib/app/ui/: menu.rs  mod.rs
src/lib/parser/: mod.rs  settings.rs
src/lib/types/: condition.rs  item.rs  mod.rs  variable.rs
