[package]
name = "storygamer"
version = "0.1.0"
authors = ["Dustin Rohde <dustin.rohde@gmail.com>"]
edition = "2018"

[lib]
name = "storygamer"
path = "src/lib/mod.rs"

[[bin]]
name = "storygamer"
path = "src/bin.rs"

[dependencies]
chrono = "0.4.19"
dirs = "3.0.1"
either = "1.6.1"
handlebars = "3.5.1"
lazy_static = "1.4.0"
log = { version = "*", features = ["serde", "release_max_level_warn"] }
log-panics = "2.0.0"
log4rs = { version = "0.13.0", features = ["file_appender", "json_encoder", "pattern_encoder"] }
nonempty = "0.6.0"
num-traits = "0.2.14"
regex = "1.4.2"
same-file = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.14"
yaml-rust = "0.4"

[dependencies.cursive]
version = "0.15.0"
default_features = false
features = ["termion-backend", "markdown", "unstable_scroll"]